# blake2_v2

./: .gitignore  README.md  TODO.md  blake2.v  blake2_g.v  blake2_hash.v  io_inft.v  makefile  top.v
conf/: blake2_debug.gtkw  top_view.gtkw  waiver.vlt
firmware/: .gitignore  CMakeLists.txt  blink.c  bus_clk.pio  data_rd.pio  data_rd_utils.c  data_rd_utils.h  data_wr.pio  data_wr_utils.c  data_wr_utils.h  loopback.pio  loopback_utils.c  loopback_utils.h  main.c  makefile  openocd.cfg  pinout.h  pinout_pio_match.h  pio_utils.c  pio_utils.h  sync_sm.pio
fpga/: .gitignore  basys2.ucf  bsp.pcf  debounce.v  emulator.v  error.v  load_design.tcl  makefile  setup.tcl
fpga/basys2/: basys2.xcf  build.tcl  makefile  setup.tcl
fpga/basys3/: .gitignore  basys3.xdc  build.tcl  debug_core.tcl  debug_probes.tcl  emulator.v  makefile  program.tcl  setup.tcl
fpga/i40/: makefile
lib/: BUFG.v  IBUF.v  OBUF.v
tb/: makefile  test_top.py  tv.md
tv/: .gitignore  blake2s.c  main.c  makefile
